[package]
name = "gfarch"
version = "0.2.1"
edition = "2021"
exclude = ["/scratch/", "main.rs"]
description = "gfarch is a Rust crate for Good-Feel's GoodFeelArchives."
readme = "README.md"
keywords = ["GoodFeel", "Nintendo"]
license = "MIT"
repository = "https://github.com/Swiftshine/gfarch-rs"

[dependencies]
bpe-rs = "0.1.0"
byteorder = "1.5.0"
thiserror = "2.0.3"
